# NeuNorm

./: .gitattributes  .gitignore  .grype.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yaml  codecov.yml  environment.yml  pixi-mapping.json  pyproject.toml
.claude/agents/: bug-hunter.md
.claude/skills/bughunt/: SKILL.md
.claude/skills/post-merge/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review-pipeline/: SKILL.md
.claude/workflows/: bughunt-deep.js  dual-family-review.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: codeql.yml  dependency-scan.yml  package.yaml  test_and_deploy.yaml  update-lockfiles.yml
apps/streamlit/: README.md  launch.sh  launch_debug.sh  launch_ornl.sh  llms-full.txt.rtf  neunorm_app.py  neunorm_app_ornl_design.py
archive/neunorm-1.x/: README.md  environment.yml
archive/neunorm-1.x/NeuNorm/: exporter.py  loader.py  roi.py
archive/neunorm-1.x/conda.recipe/: meta.yaml
archive/neunorm-1.x/documentation/: Makefile  readthedocs-environment.yml
archive/neunorm-1.x/documentation/source/: cropping_data.rst  export_data.rst  index.rst  tutorial_normalization_with_fewer_ob_than_sample.ipynb
archive/neunorm-1.x/notebooks/: tutorial_normalization_with_fewer_ob_than_sample.ipynb  tutorial_using_array_input.ipynb  tutorial_using_array_input_and_several_roi.ipynb
archive/neunorm-1.x/paper/: paper.bib  paper.md
archive/neunorm-1.x/scripts/: clean_build_artifacts.sh
archive/neunorm-1.x/tests/NeuNorm/: normalizing_test.py  test_cropping.py  test_roi.py  test_utilities.py
auto_reports/prompts/: prompt_P2_jit_refine_boundaries.md  prompt_P3_jit_remaining_functions.md  prompt_P4_parallel_processing.md
conda-recipe/: meta.yaml
docs/: api.rst  conf.py  index.md  migration.md
docs/development/: DEVELOPMENT_PLAN.md
docs/workflows/: README.md  mars_ccd_cmos.md  mars_tpx3.md  venus_ccd_cmos.md  venus_tpx1.md  venus_tpx3.md
documentation/source/: conf.py  tutorial_using_array_input.ipynb  tutorial_using_folder_input.ipynb
examples/: pulse_reconstruction_explained.ipynb
notebooks/: debugging_multi_roi_bug.ipynb  ipts-16259.ipynb  notebook_display_with_time_estimation.ipynb  testing_new_auto_gamma_filtering.ipynb  tutorial_normalization_with_fewer_ob_than_sample.ipynb  tutorial_normalization_with_fewer_ob_than_sample_MAYBE_BUG.ipynb  tutorial_using_array_input.ipynb  tutorial_using_array_input_and_export_array.ipynb  tutorial_using_array_input_and_several_roi.ipynb  tutorial_using_folder_input.ipynb
src/NeuNorm/: __init__.py  _utilities.py  _version.py  normalization.py  roi.py
src/neunorm/: __init__.py  _version.py
src/neunorm/data_models/: __init__.py  core.py  roi.py  tof.py
src/neunorm/exporters/: __init__.py  hdf5_writer.py  tiff_writer.py
src/neunorm/filters/: __init__.py  gamma_filter.py
src/neunorm/loaders/: __init__.py  event_loader.py  fits_loader.py  metadata_loader.py  stack_loader.py  tiff_loader.py
src/neunorm/pipelines/: __init__.py  mars_ccd.py  mars_tpx3.py  venus_ccd.py  venus_tpx1.py  venus_tpx3_event.py  venus_tpx3_histogram.py
src/neunorm/processing/: __init__.py  air_region_corrector.py  dark_corrector.py  normalizer.py  reference_preparer.py  roi_clipper.py  run_combiner.py  spatial_rebinner.py  uncertainty_calculator.py
src/neunorm/tof/: __init__.py  binning.py  coordinate_converter.py  event_converter.py  histogram_rebinner.py  pixel_detector.py  pulse_reconstruction.py  resonance.py  statistics_analyzer.py
src/neunorm/utils/: __init__.py  _numba_compat.py  constants.py
tests/NeuNorm/: export_test.py  loading_test.py  roi_test.py
tests/integration/: test_tof_pipeline.py
tests/neunorm/: test_version.py
tests/unit/: test_air_region_corrector.py  test_analyze_statistics.py  test_background_roi_pooled.py  test_binning_config.py  test_binning_conversions.py  test_constants.py  test_dark_corrector.py  test_division_by_zero_guards.py  test_event_converter.py  test_event_loader.py  test_eventdata_auto_validation.py  test_fits_loader.py  test_gamma_filter.py  test_hdf5_writer.py  test_mars_ccd.py  test_mars_tpx3.py  test_metadata_loader.py  test_normalizer.py  test_numba_compat.py  test_parallel_processing.py  test_pixel_detector.py  test_pulse_reconstruction.py  test_rebin_spatial.py  test_rebin_tof.py  test_reference_preparer.py  test_refine_boundaries_jit.py  test_remaining_jit.py  test_resonance_detection.py  test_roi.py  test_roi_clipper.py  test_run_combiner.py  test_tiff_loader.py  test_tiff_writer.py  test_uncertainty.py  test_variance_propagation_fix.py  test_venus_ccd.py  test_venus_tpx1.py  test_venus_tpx3_event.py  test_venus_tpx3_histogram.py
